--- a/frontend/src/Pages/Home/Home.css
+++ b/frontend/src/Pages/Home/Home.css
@@ -6,6 +6,7 @@
     font-family: 'Bebas Neue', cursive;
     font-family: 'IBM Plex Sans', sans-serif;
     min-height: 63vh;
+    text-decoration: none;
     
 }
 
